--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-amplify/core": "^6.16.1",
+    "@aws-amplify/ui-react": "^6.15.0",
     "aws-amplify": "^6.16.2",
     "chart.js": "^4.5.1",
     "next": "16.1.6",
