--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "binsentry-dashboard",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,8 +12,11 @@
   "dependencies": {
     "@aws-amplify/core": "^6.16.1",
     "@aws-amplify/ui-react": "^6.15.0",
+    "@aws-sdk/client-dynamodb": "^3.993.0",
+    "@aws-sdk/lib-dynamodb": "^3.993.0",
     "aws-amplify": "^6.16.2",
     "chart.js": "^4.5.1",
+    "dotenv": "^17.3.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-chartjs-2": "^5.3.1",
